# CMakeLists.txt for infra/engine

add_library(engine STATIC)

# Add source files here (example)
# target_sources(engine PRIVATE engine.cpp)

# Add include directories if needed
# target_include_directories(engine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)

# Set properties or dependencies as needed
